--- a/index.html
+++ b/index.html
@@ -6,7 +6,43 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="page">
+    <section class="container container-title">
+      <h2 id="password" class="title">PASSWORD</h2>
+    </section>
+    <p id="length">LENGTH: 4</p>
+    <section class="container container-slider">
+      <p>4</p>
+      <input
+        id="slider"
+        class="slider-bar"
+        type="range"
+        min="4"
+        max="32"
+        value="4"
+        step="1"
+      />
+      <p>32</p>
+    </section>
+    <section class="container container-option">
+      <p>Include Uppercase</p>
+      <input id="upperCheck" type="checkbox" />
+    </section>
+    <section class="container container-option">
+      <p>Include Lowercase</p>
+      <input id="lowerCheck" type="checkbox" />
+    </section>
+    <section class="container container-option">
+      <p>Include Numbers</p>
+      <input id="numCheck" type="checkbox" />
+    </section>
+    <section class="container container-option">
+      <p>Include Symbols</p>
+      <input id="symbolCheck" type="checkbox" />
+    </section>
+    <button id="pass-button" class="button">
+      <a href="#">Generate password</a>
+    </button>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
