move const to object

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <p>Include Symbols</p>
       <input id="symbolCheck" type="checkbox" />
     </section>
-    <button id="pass-button" class="button">
-      <a href="#">Generate password</a>
+    <button id="pass-button" class="button" disabled="true">
+      <p href="#">Generate password</p>
     </button>
     <script src="/js/scripts.js"></script>
   </body>
